Fix light body background while dark mode enabled

--- a/public/style.css
+++ b/public/style.css
@@ -2000,6 +2000,11 @@ html, body {
   -ms-touch-action: none;
 }
 
+body.dark {
+  --tw-bg-opacity: 1;
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+
 .safe-area-bottom {
   padding-bottom: var(--safe-area-bottom);
 }
